--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 	<div class="above-game">
 		<a class="restart-button">New Game</a>
 		<a class="undo-button">Undo Move</a>
+		<a class="save-button">Save</a>
+		<a class="load-button">Load</a>
 	</div>
 
 	<div class="game-container">
