Updated game instructions

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 	<p class="game-explanation"><strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong></p>
 	<hr />
-	<p>You can also use <strong>R</strong> to start a new game, and <strong>U</strong> to undo - you can undo as many as your last 50 moves, even if you've lost the game... and don't mind a bit of cheating!</p>
+	<p>You can also use <strong>R</strong> to start a new game, and <strong>U</strong> to undo - you can undo as many as your last 50 moves, even if you've lost the game... and don't mind a bit of cheating! The game now includes <strong>Save</strong> and <strong>Load</strong> options - at the moment you can only have one saved game, so be careful how you use this - hopefully at some point the ability to maintain multiple saves will be added...</p>
 	<hr />
 	<p><strong class="important">Note:</strong> This site is a minor enhancement to the official version of 2048, created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli</a>, based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a></p>
 	<hr />
